# CCF

./: .gitmodules  CMakeLists.txt
.github/: lts_merge_template.md
.github/workflows/: create-lts-merge-issue.yml
cmake/: FindMbedTLS.cmake  common.cmake
doc/build_apps/: api.rst  demo.rst  logging_cpp.rst
doc/contribute/design/: index.rst
doc/developers/kv/: kv_how_to.rst
doc/schemas/: app_openapi.json  gov_openapi.json  node_openapi.json
include/ccf/: tx.h
python/ccf/: proposal_generator.py
samples/apps/logging/: logging.cpp
samples/apps/nobuiltins/: nobuiltins.cpp
samples/apps/smallbank/app/: smallbank.cpp
samples/apps/smallbank/fbs/tests/: small_bank_serdes_bench.cpp
scripts/: interleave.py  interleave_logs.py
src/apps/js_generic/: js_generic.cpp
src/apps/logging/: logging.cpp  logging_schema.h
src/apps/lua_generic/: lua_generic.cpp
src/apps/luageneric/test/: luageneric_test.cpp
src/apps/smallbank/app/: smallbank.cpp
src/apps/utils/: base_endpoint_registry.h  common_endpoint_registry.h  metrics.h  metrics_tracker.h  user_frontend.h
src/clients/: client.cpp  tls_client.h
src/consensus/: CMakeLists.txt
src/consensus/pbft/: pbft_config.h  pbft_types.h
src/consensus/pbft/libbyz/: types.h
src/consensus/pbft/libbyz/test/: replica_unit_tests.cpp
src/consensus/raft/: raft.h
src/crypto/: CMakeLists.txt
src/crypto/crypto/: hash.h  symmkey.h
src/crypto/crypto/test/: crypto.cpp
src/ds/: CMakeLists.txt  logger.h  spin_lock.h
src/ds/ds/: README.md  files.h  msgpack_adaptor_nlohmann.h
src/ds/test/: hash.cpp  json_bench.cpp  json_schema.cpp  logger_bench.cpp  logger_json_bench.cpp  logger_json_test.cpp  map_bench.cpp  map_test.cpp  messaging.cpp  oversized.cpp  ringbuffer.cpp  ringbuffer_bench.cpp  serializer.cpp  spin_lock.cpp
src/enclave/: CMakeLists.txt  abstract_frontend.h  app_interface.h  enclave.h  interface.h  rpc_map.h  rpc_sessions.h
src/enclave/enclave/: main.cpp
src/endpoints/: base_endpoint_registry.cpp
src/host/: CMakeLists.txt  dns.h  handle_ringbuffer.h  main.cpp  notifyconnections.h  rpcconnections.h  tcp.h
src/host/test/: ledger.cpp
src/http/: http_endpoint.h  http_parser.h  query_parser.h
src/http/authentication/: cert_auth.h  sig_auth.h
src/http/test/: http_test.cpp
src/kv/: CMakeLists.txt  kv_types.h  map.h  store.h  tx.h  tx_view.h  untyped_map.h  untyped_map_handle.h  view_containers.h
src/kv/kv/: kv.h  msgpackserialise.h  nljsonserialise.h
src/kv/test/: kv_bench.cpp  kv_contention.cpp  kv_serialisation.cpp  kv_snapshot.cpp  kv_test.cpp
src/lua_interp/: lua_args.h
src/luainterp/: luaargs.h  luainterp.h  luautil.h
src/luainterp/test/: lua_test.cpp  luakv.cpp
src/node/: CMakeLists.txt  genesis_gen.h  historical_queries.h  historical_queries_interface.h  history.h  network_tables.h  node_to_node.h  notifier.h  users.h
src/node/node/: certs.h  clientsignatures.h  history.h  members.h  networksecrets.h  proposals.h  script.h  seal.h  signatures.h  votinghistory.h
src/node/node/rpc/: consts.h  managementfrontend.h  memberfrontend.h  nodefrontend.h
src/node/node/test/: channels.cpp  encryptor.cpp  merkle_bench.cpp  merkle_mem.cpp  msgpack_serialization.cpp
src/node/rpc/: call_types.h  common_endpoint_registry.h  common_handler_registry.h  consts.h  endpoint_registry.h  forwarder.h  frontend.h  handler_registry.h  json_handler.h  member_frontend.h  metrics.h  node_frontend.h  nodeinterface.h  serialization.h  user_frontend.h
src/node/rpc/test/: frontend_test.cpp  frontend_test_infra.h  member_voting_test.cpp  node_stub.h
src/node/test/: channels.cpp  historical_queries.cpp  history.cpp  merkle_mem.cpp
src/tls/: CMakeLists.txt
src/tls/test/: bench.cpp  keyexchange.cpp  main.cpp
src/tls/tls/: ca.h  keypair.h  msg_types.h  pem.h
tests/: committable.py  e2e_args.py  e2e_logging.py  election.py  governance.py  notifications.py  small_bank_locust.py  start_network.py
tests/infra/: ccf.py  net.py  network.py  notification.py  rates.py  remote.py
